--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>hoyocon.bomberman/hoyocon.bomberman.HelloApplication</mainClass>
+                            <mainClass>hoyocon.bomberman/hoyocon.bomberman.Main</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
